src/test/deca/syntax/invalid/SansObjet/ReturnVar.deca
//Description
//  return comme nom de variable
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input 'return'

{
    int return = 0;
}